; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_workqueue.c_work_is_canceling.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_workqueue.c_work_is_canceling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@WORK_STRUCT_PWQ = common dso_local global i64 0, align 8
@WORK_OFFQ_CANCELING = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.work_struct*)* @work_is_canceling to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @work_is_canceling(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca i64, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %4 = load %struct.work_struct*, %struct.work_struct** %2, align 8
  %5 = getelementptr inbounds %struct.work_struct, %struct.work_struct* %4, i32 0, i32 0
  %6 = call i64 @atomic_long_read(i32* %5)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @WORK_STRUCT_PWQ, align 8
  %9 = and i64 %7, %8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %1
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @WORK_OFFQ_CANCELING, align 8
  %14 = and i64 %12, %13
  %15 = icmp ne i64 %14, 0
  br label %16

16:                                               ; preds = %11, %1
  %17 = phi i1 [ false, %1 ], [ %15, %11 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i64 @atomic_long_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
